--- a/wu/index.html
+++ b/wu/index.html
@@ -78,16 +78,19 @@
             <div class="row">
                 <div class="col-md-7 col-md-offset-0 col-sm-10 col-sm-offset-1">
                     <div class="text-center">
-                        <img src="http://ocwjo7fom.bkt.clouddn.com/16-10-25/44032411.jpg" alt="Rounded Image" class="img-rounded img-responsive img-dog">
-                        <p>CST 2016 & PM</p>
+                        <img src="assets/img/img.jpg" alt="Rounded Image" class="img-rounded img-responsive img-dog">
+                        <p>CST Family</p>
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-12">
-                                <h1 class="text-center">About CST
+                                <h2 class="text-center">About CST
                                 </h1>
                                 <hr>
                                 <p>
-                                Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers. It is the scientific and practical approach to computation and its applications and the systematic study of the feasibility, structure, expression, and mechanization of the methodical procedures (or algorithms) that underlie the acquisition, representation, processing, storage, communication of, and access to information. An alternate, more succinct definition of computer science is the study of automating algorithmic processes that scale. A computer scientist specializes in the theory of computation and the design of computational systems.
+                                This is a badass major.<br>
+                                And that is all you need to know.
+                                <br><br><br><br><br>
+                                UICcst AS
                                 </p>
             </div>
         </div>
@@ -96,13 +99,12 @@
 <!-- end container -->
 <div class="space-30"></div>
 <hr/>
-<p>©2016 UIC-PANICS \ All Right Reserved.丨粤ICP备15018581号-1</p>
+<p>©2017 UIC-PANICS \ All Right Reserved.丨粤ICP备15018581号-1</p>
 </div>
 </body>
 
     <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
 	<script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script>
-
 	<script src="bootstrap3/js/bootstrap.js" type="text/javascript"></script>
 	<script src="assets/js/gsdk-checkbox.js"></script>
 	<script src="assets/js/gsdk-radio.js"></script>
