--- a/deng/index.html
+++ b/deng/index.html
@@ -5,39 +5,123 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	
 	<link rel="stylesheet" href="css/style.css">
-<script src="js/device.js"></script>
 <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
 <script src="js/unslider.min.js"></script>
+<script src="js/phonebar.js"></script>
+<script src="js/device.js"></script>
 </head>
+
 <body>
+<!--fixed element start-->
+<!--PC fixed element start-->
 <div class="header">
-<div id="headerleft">
+<a href="http://uiccst.com"><div id="headerleft">
 <img src="images/logo.png" height="50%">
-<span id="cst"><b>UICCST</b></span>
-</div>
+<span id="cst"><b>UICcst</b></span>
+</div></a>
 <div id="headerright">
 <ul>
-	<li>About Us</li>
-	<li>Github Organization</li>
+	<li><a href="http://uiccst.com/form">Register Now</a></li>
 </ul>
 </div>
 </div>
+
+
 <div id="bar2">
-<ul id="changemargin">
-	<div class="bar2list"><li>Home</li></div>
-	<div class="bar2list"><li>Video Game Competition</li></div>
-</ul>
+<table cellspacing="0">
+	<tr>
+		<th><a href="#b04">主页</a></th>
+		<th><a href="">英雄联盟</a></th>
+		<th><a href="">守望先锋</a></th>
+		<th><a href="">炉石传说</a></th>
+		<th><a href="">王者荣耀</a></th>
+		<th><a href="">皇室战争</a></th>
+		<th><a href="">欢乐斗地主</a></th>
+	</tr>
+</table>
 </div>
+
+<!--PC fixed element end-->
+<!--Mobile fixed element start-->
+<div id="phoneheader">
+<img src="images/menu.png" height="100%" onclick="phonebar()">
+<h3 id="phonetitle">8th Video Game Competition</h3>
+</div>
+<div id="phonebarbackground" onclick="hidephonebar()">
+</div>
+<div id="phonebar">
+<div id="phonebarheader">
+<h2 id="headerh2">Menu</h2>
+</div>
+<table cellpadding="18px">
+	<tr><td><a href=""><b>主页</b></a></td></tr>
+	<tr><td><a href=""><b>英雄联盟</b></a></td></tr>
+	<tr><td><a href=""><b>守望先锋</b></a></td></tr>
+	<tr><td><a href=""><b>炉石传说</b></a></td></tr>
+	<tr><td><a href=""><b>王者荣耀</b></a></td></tr>
+	<tr><td><a href=""><b>皇室战争</b></a></td></tr>
+	<tr><td><a href=""><b>欢乐斗地主</b></a></td></tr>
+	<tr><th><a href="http://uiccst.com/form"><b>Register Now</b></a></th></tr>
+
+</table>
+</div>
+
+</div>
+<!--Mobile fixed element end-->
+<!--fixed element end-->
+
+
+
 <div class="banner" id="b04">
     <ul>
-        <li><img src="images/cover.jpg" alt="" width="100%" height="auto"></li>
+        <li><img src="images/lol.jpg" alt="" width="100%" height="auto" ></li>
         <li><img src="images/ow.png" alt="" width="100%" height="auto" ></li>
         <li><img src="images/hearthstone.jpg" alt="" width="100%" height="auto" ></li>
-        <li><img src="images/lol.jpg" alt="" width="100%" height="auto" ></li>
+        <li><img src="images/king.png" alt="" width="100%" height="auto" ></li>
+        <li><img src="images/clashroyale.png" alt="" width="100%" height="auto" ></li>
     </ul>
     <a href="javascript:void(0);" class="unslider-arrow04 prev"><img class="arrow" id="al" src="images/arrowl.png" alt="prev" width="20" height="35"></a>
     <a href="javascript:void(0);" class="unslider-arrow04 next"><img class="arrow" id="ar" src="images/arrowr.png" alt="next" width="20" height="37"></a>
 </div>
+
+<!--add things from here-->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -48,37 +132,7 @@
 <br>
 <br>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
+</body>
 <script>
 $(document).ready(function(e) {
     var unslider04 = $('#b04').unslider({
@@ -93,23 +147,22 @@ $(document).ready(function(e) {
 });
 </script>
 <script type="text/javascript">
+if(isPC()==true || isiPad()==true){
 	window.onscroll=function(){
 	var scrolltop=$(document).scrollTop();
 	var element=document.getElementById("bar2");
-	var element1=document.getElementById("changemargin");
 	if(scrolltop==0){
 		element.style.display="block";
 		element.style.top="100px";
 		element.style.marginLeft="5%";
 		element.style.width="90%";
-		element1.style.marginLeft="0";
 	}
 	else{
 		element.style.top="0";
 		element.style.marginLeft="0";
 		element.style.width="100%";
-		element1.style.marginLeft="5%";
 	}
+}
 }
 	</script>
 </html>
