--- a/deng/index.html
+++ b/deng/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>8th UIC Video Game Competition</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-	
+	<meta charset="utf-8">
+	<meta name="theme-color" content="rgb(49,60,85)">
 	<link rel="stylesheet" href="css/style.css">
 <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
 <script src="js/unslider.min.js"></script>
