fix display problem

--- a/deng/index.html
+++ b/deng/index.html
@@ -51,10 +51,8 @@
 <div id="phonebarbackground" onclick="hidephonebar()">
 </div>
 <div id="phonebar">
-<div id="phonebarheader">
-<h2 id="headerh2">Menu</h2>
-</div>
 <table cellpadding="18px">
+<tr><th><b>Menu</b></th></tr>
 	<tr><td><a href=""><b>主页</b></a></td></tr>
 	<tr><td><a href=""><b>英雄联盟</b></a></td></tr>
 	<tr><td><a href=""><b>守望先锋</b></a></td></tr>
@@ -62,7 +60,7 @@
 	<tr><td><a href=""><b>王者荣耀</b></a></td></tr>
 	<tr><td><a href=""><b>皇室战争</b></a></td></tr>
 	<tr><td><a href=""><b>欢乐斗地主</b></a></td></tr>
-	<tr><th><a href="http://uiccst.com/form"><b>Register Now</b></a></th></tr>
+	<tr><th id="phonebarth"><a href="http://uiccst.com/form"><b>Register Now</b></a></th></tr>
 
 </table>
 </div>
