change Homepage Text

--- a/wu/index.html
+++ b/wu/index.html
@@ -69,7 +69,10 @@
 <div class="main">
 <div class="text-container">
 <div class="text">
-<img src="assets/img/text.png">
+<p class="words">UICcst<br>
+Computer Science &<br>
+Technology Homepage_
+</p>
 </div>
 </div>
     <div class="container tim-container">
