--- a/deng/index.html
+++ b/deng/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>8th UIC Video Game Competition</title>
+	<title>8th UIC Cyber Game Competition</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta charset="utf-8">
 	<meta name="theme-color" content="rgb(49,60,85)">
@@ -46,7 +46,7 @@
 <!--Mobile fixed element start-->
 <div id="phoneheader">
 <img src="images/menu.png" height="100%" onclick="phonebar()">
-<h3 id="phonetitle">8th Video Game Competition</h3>
+<h3 id="phonetitle">8th Cyber Game Competition</h3>
 </div>
 <div id="phonebarbackground" onclick="hidephonebar()">
 </div>
