--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="bootstrap3/css/bootstrap.css" rel="stylesheet" />
 	<link href="assets/css/gsdk.css" rel="stylesheet" />  
     <link href="assets/css/demo.css" rel="stylesheet" /> 
+    <link rel="stylesheet" href="fonts/specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="fonts/stylesheet.css" type="text/css" charset="utf-8" />
     <!--     Font Awesome     -->
 <!--<link href="bootstrap3/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'> -->
@@ -111,6 +113,8 @@ Technology Homepage_
 	<script src="assets/js/gsdk-bootstrapswitch.js"></script>
 	<script src="assets/js/get-shit-done.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="fonts/specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
          
