--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -10,6 +10,7 @@
 <script src="js/unslider.min.js"></script>
 <script src="js/phonebar.js"></script>
 <script src="js/device.js"></script>
+
 </head>
 
 <body>
@@ -166,5 +167,24 @@ $(document).ready(function(e) {
 	}
 }
 }
+window.onresize=function(){
+		var wide=screen.width;
+		if(isPC()==true || isiPad()==true || wide>=768){
+	window.onscroll=function(){
+	var scrolltop=$(document).scrollTop();
+	var element=document.getElementById("bar2");
+	if(scrolltop==0){
+		element.style.top="100px";
+		element.style.marginLeft="5%";
+		element.style.width="90%";
+	}
+	else{
+		element.style.top="0";
+		element.style.marginLeft="0";
+		element.style.width="100%";
+	}
+}
+}
+	}
 </script>
 </html>
