add hearthstone card upload system

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -54,13 +54,13 @@
 <div id="phonebar">
 <table cellpadding="18px">
 <tr><th><b>Menu</b></th></tr>
-	<tr><td><a href=""><b>主页</b></a></td></tr>
-	<tr><td><a href=""><b>英雄联盟</b></a></td></tr>
-	<tr><td><a href=""><b>守望先锋</b></a></td></tr>
-	<tr><td><a href=""><b>炉石传说</b></a></td></tr>
-	<tr><td><a href=""><b>王者荣耀</b></a></td></tr>
-	<tr><td><a href=""><b>皇室战争</b></a></td></tr>
-	<tr><td><a href=""><b>欢乐斗地主</b></a></td></tr>
+	<tr><td><a href="#blank" onclick="hidephonebar()"><b>主页</b></a></td></tr>
+	<tr><td><a href="" onclick="hidephonebar()"><b>英雄联盟</b></a></td></tr>
+	<tr><td><a href="" onclick="hidephonebar()"><b>守望先锋</b></a></td></tr>
+	<tr><td><a href="" onclick="hidephonebar()"><b>炉石传说</b></a></td></tr>
+	<tr><td><a href="" onclick="hidephonebar()"><b>王者荣耀</b></a></td></tr>
+	<tr><td><a href="" onclick="hidephonebar()"><b>皇室战争</b></a></td></tr>
+	<tr><td><a href="" onclick="hidephonebar()"><b>欢乐斗地主</b></a></td></tr>
 	<tr><th id="phonebarth"><a href="http://uiccst.com/form"><b>Register Now</b></a></th></tr>
 
 </table>
@@ -70,7 +70,8 @@
 <!--Mobile fixed element end-->
 <!--fixed element end-->
 
-
+<div id="blank">
+</div>
 
 <div class="banner" id="b04">
     <ul>
