change main page of game

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -33,12 +33,15 @@
 <table cellspacing="0">
 	<tr>
 		<th><a href="#b04">主页</a></th>
+		<th><a href="hearthstone/index.html">查看炉石卡组</a></th>
+		<th><a href="hearthstone/preupload.html">上传炉石卡组</a></th>
 		<th><a href="">英雄联盟</a></th>
 		<th><a href="">守望先锋</a></th>
 		<th><a href="">炉石传说</a></th>
 		<th><a href="">王者荣耀</a></th>
 		<th><a href="">皇室战争</a></th>
 		<th><a href="">欢乐斗地主</a></th>
+		
 	</tr>
 </table>
 </div>
@@ -55,6 +58,8 @@
 <table cellpadding="18px">
 <tr><th><b>Menu</b></th></tr>
 	<tr><td><a href="#blank" onclick="hidephonebar()"><b>主页</b></a></td></tr>
+	<tr><td><a href="hearthstone/index.html" onclick="hidephonebar()"><b>查看炉石卡组</b></a></td></tr>
+	<tr><td><a href="hearthstone/preupload.html" onclick="hidephonebar()"><b>上传炉石卡组</b></a></td></tr>
 	<tr><td><a href="" onclick="hidephonebar()"><b>英雄联盟</b></a></td></tr>
 	<tr><td><a href="" onclick="hidephonebar()"><b>守望先锋</b></a></td></tr>
 	<tr><td><a href="" onclick="hidephonebar()"><b>炉石传说</b></a></td></tr>
