--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                     
 
 
-                <div class="container">
-    
+<div class="container">
 </div>
 
 <div class="main">
@@ -88,7 +87,7 @@ Technology Homepage_
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-12">
-                                <h2 class="text-center">Lorem ipsum
+                                <h2 class="text-center">Lorem ipsum</h2>
                                 </h1>
                                 <hr>
                                 <p>
@@ -98,11 +97,13 @@ Technology Homepage_
         </div>
     <!--     end extras -->    
     </div>
+    </div>
+    </div>
 <!-- end container -->
-<div class="space-30"></div>
-<hr/>
-<p>©2017 UIC-PANICS \ All Right Reserved.丨粤ICP备15018581号-1</p>
+<div class="grayfooter">
+    <p class="footerword">©2017 UIC-PANICS \ All Right Reserved.丨粤ICP备15018581号-1</p>
 </div>
+
 </body>
 
     <script src="jquery/jquery-1.10.2.js" type="text/javascript"></script>
