erase the misleading botton on bottom of  "king" img

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -119,7 +119,7 @@
         <li><img src="images/lol.jpg" alt="" width="100%" height="auto" ></li>
         <li><img src="images/ow.png" alt="" width="100%" height="auto" ></li>
         <li><img src="images/hearthstone.jpg" alt="" width="100%" height="auto" ></li>
-        <li><img src="images/king.png" alt="" width="100%" height="auto" ></li>
+        <li><img src="images/king.jpg" alt="" width="100%" height="auto" ></li>
         <li><img src="images/clashroyale.png" alt="" width="100%" height="auto" ></li>
     </ul>
     <a href="javascript:void(0);" class="unslider-arrow04 prev"><img class="arrow" id="al" src="images/arrowl.png" alt="prev" width="20" height="35"></a>
