--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -72,8 +72,8 @@
 	</tr>
 	<tr onmouseover="showdiv()" onmouseout="hidediv()">
 		<td colspan="7"><ul id="spanul">
-	<a href="hearthstone/index.html"><li  id="spanli">查看卡组</li></a>
-	<a href="hearthstone/preupload.html"><li  id="spanli">上传卡组</li></a>
+	<a href="hearthstone/index.html"><li  class="spanli">查看卡组</li></a>
+	<a href="hearthstone/preupload.html"><li  class="spanli">上传卡组</li></a>
 </ul></td>
 	</tr>
 </table>
@@ -91,7 +91,7 @@
 <div id="phonebar">
 <table cellpadding="18px">
 <tr><th><b>Menu</b></th></tr>
-	<tr><td><a href="#blank" onclick="hidephonebar()"><b>主页</b></a></td></tr>
+	<tr><td><a href="#blank"><b>主页</b></a></td></tr>
 	
 	<tr><td><a href="" onclick="hidephonebar()"><b>英雄联盟</b></a></td></tr>
 	<tr><td><a href="" onclick="hidephonebar()"><b>守望先锋</b></a></td></tr>
