fix logo problem

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -47,8 +47,7 @@
 <!--PC fixed element start-->
 <div class="header">
 <a href="http://uiccst.com"><div id="headerleft">
-<img src="images/logo.png" height="50%">
-<span id="cst"><b>UICcst</b></span>
+<img src="images/new_logo.png" height="60%" style="margin-top: 10px">
 </div></a>
 <div id="headerright">
 <ul>
