--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@ Technology Homepage_
     </div>
     </div>
 <!-- end container -->
-<div class="grayfooter">
-    <p class="footerword">©2017 UIC-PANICS \ All Right Reserved.丨粤ICP备15018581号-1</p>
-</div>
+    <footer class="footer">
+    <div class="container">
+        <span class='text-muted'>&copy; UIC-PANICS 2017</span>
+    </div>
+    </footer>
 
 </body>
 
