Add copyright info

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -102,7 +102,7 @@ Technology Homepage_
 <!-- end container -->
     <footer class="footer">
     <div class="container">
-        <span class='text-muted'>&copy; UIC-PANICS 2017</span>
+        <span class='text-muted'>&copy; UIC-PANICS 2016-2017</span>
     </div>
     </footer>
 
