add introductions to some games

--- a/cybergame/index.html
+++ b/cybergame/index.html
@@ -10,11 +10,72 @@
 <script src="js/unslider.min.js"></script>
 <script src="js/phonebar.js"></script>
 <script src="js/device.js"></script>
-	<script src="js/jquery.scrollto.js"></script>
 </head>
-
+<!--body start-->
 <body>
 <!--fixed element start-->
+<!--fixed container-->
+<div class="detailbox" id="owcontent">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("owcontent")'>
+		<h2 class="phonetitle1">守望先锋</h2>
+	</div>
+	<div class="introboxcontent">
+		<h2>第八届 UICCG 守望先锋团队赛细则</h2>
+		<ol>
+			<li><b>比赛地图：</b>游戏内所有地图</li>
+			<li><b>比赛规则及胜负判定：</b>所有比赛都将在竞技模式下进行，采取三局两胜制。率先赢得2张地图胜利的队伍即为胜出者，能够晋级下一场比赛。
+				比赛第一张为随机地图，第二张地图开始败者选图，比赛地图不可重复出现。运载目标、占领目标点类型地图比赛两队将各成为一次进攻方与防守方，若某队两次均获得胜利则获得该局比赛胜利；若运载目标、占领要点类型地图两队各获得一次比赛胜利，则随机挑选一张占领目标点地图进行一小局争夺点战（只抢第一个点作为胜负标准），获胜者获得该局比赛胜利（此时不需两队都进行一次进攻一次防守）。
+			</li>
+			<li><b>赛程：</b>本次比赛采用抽签决定对阵双方，？月？日没有来抽签的队伍将由专学负责代抽。本次比赛一共有？？只队伍，分为AB两组，每组？？支队伍。A 组周六比赛，B 组周日比赛。第一轮比赛结束后晋级？支队伍，随后进行第二轮抽签决定新的对阵情况以及轮空队伍。轮空队伍直接晋级下一轮。A 组第一名与 B 组第一名将于？年？月？日进行决赛。两组的亚军将于？月？日进行第三名争夺。（如参赛队伍不多则安排所有队伍在同一个大组内进行淘汰赛）</li>
+			<li><b>注意事项：</b>请各位选手按需自带设备进行比赛。如在网吧进行比赛，请参赛选手自行承担来往交通费及网费。</li>
+			<li><b>队伍组成及相关：</b>每支队伍由6名选手组成，整个比赛期间（报名后至所有比赛结束）不可变更选手及战网昵称；所有队伍报名时需要提供所有队员的联系方式。</li>
+			<li><b>特殊情况处理：</b>
+				<ul>
+					<li>掉线：比赛中若由于客观原因，造成的掉线卡机的情况，3分钟内发生掉线情况可申请重赛;超过3分钟发生掉线情况比赛继续，掉线的选手自行重连回游戏。重赛机制需要队伍申请执行，每支队伍只有1次掉线申请重赛的机会。</li>
+					<li>缺席：若参赛队伍在比赛开始后5分钟内队员没有到齐进行比赛，则该队判负。因为特殊原因不能参与当日比赛的，可与对手商议在比赛第一轮结束前自行比赛。</li>
+					<li>作弊：若参赛队伍有使用任何非官方插件等辅助程序的一经发现，取消比赛资格。</li>
+				</ul>
+				若出现掉线、卡机、卡顿等非人为情况出现请及时呼叫相关工作人员，由裁判决定是否重赛（原则上不给予重赛）。重赛规则详见第八届 UICCG 守望先锋团队赛重赛规则
+			</li>
+			<li><b>严禁代打：</b>参赛选手请携带uic校园卡做身份证明，否则将不允许该选手参赛。</li>
+			<li><b>游戏BUG：</b>禁止使用当前版本下的游戏BUG，官方有权禁用引起BUG的英雄或地图。如参赛人员有利用游戏中BUG的行为，将判定该玩家所在队伍失去比赛资格。</li>
+			<li><b>比赛版本更替：</b>比赛将使用最新游戏版本。</li>
+			<li><b>参赛队伍管理：</b>所有参赛队伍成员将由组织者统一拉进一个比赛微信群作为消息通知的平台，请选手们在群内谨言慎行。若是有在群内发布含有恶意辱骂其他选手、虚假消息等等类似言论的选手出现，组织者有权取消其所在队伍的比赛资格，其对手直接晋级下一轮比赛。</li>
+		</ol>
+	</div>
+</div>
+<div class="detailbox" id="kingcontent">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("kingcontent")'>
+		<h2 class="phonetitle1">王者荣耀</h2>
+	</div>
+	<div class="introboxcontent">
+		<h2>第八届 UICCG 王者荣耀赛制</h2>
+		<h3>队伍</h3>
+		<p>每个队伍中必须有五位成员，其中有一位队长和四位队员，允许有一名替补。
+			注：比赛时不允许未登记的选手参加，否则违规队伍判弃权。 </p>
+		<h3>比赛形式</h3>
+		<p>比赛在预赛（当队伍数量>8 时），采取双淘汰制度：第一场按照系统随机生成的比赛表进 行比赛，决出胜方（A 组）和负方（B 组）。A 组中两队随机对战，胜利方继续与其他 A 组队伍比拼；负方进入 B 组与 B 组其他队伍比赛。
+			B 组中如果累计失败数达两次的队伍则淘汰。
+			当 A 组还剩下 6 只队伍，B 组还剩下 2 只队伍时，进入复赛。复赛中采用三局两胜 （BO3），胜利队伍晋级，失败队伍淘汰。最后选出冠亚季军队伍。 </p>
+	</div>
+</div>
+<div class="detailbox" id="crcontent">
+	<div class="phoneheader">
+		<img src="images/clear.png" class="imgstyle" alt="" onclick='hidedetailbox("crcontent")'>
+		<h2 class="phonetitle1">皇室战争</h2>
+	</div>
+	<div class="introboxcontent">
+		<h2>第八届 UICCG皇室战争赛制</h2>
+		<ul>
+			<li>所有参赛人员在同一部落中，比赛以友谊赛的形式进行。比赛分为小组赛和淘汰赛。</li>
+			<li>小组赛。所有参赛人员侯倩分成若干组。组内所有人以友谊赛方式进行对战，同时积分，与组内其他人各1次对战。赢得一场比赛获得3分，平局双方各1分，输则没有分。当比赛完时，各小组前X名进淘汰赛（根据报名人数），淘汰赛人数为8/16（根据比赛人数）</li>
+			<li>淘汰赛。进入淘汰赛的参赛选手根据小组排名决定对手（如第一最另一组最后一名），以三局两胜制决定晋级。确定对手后双方进行ban卡选择，各选择1张卡，若选择相同则只有一张ban卡，即双方都不能在该局比赛中使用该卡（若使用则本局比赛判负同时警告一次，同时使用ban卡则跳过本局比赛双方同时警告，警告达到两次取消比赛资格。）每局比赛后双方可以任意调整卡组（ban卡除外）并继续下一局对战。晋级选手继续抽签直到决出冠亚季军。</li>
+		</ul>
+	</div>
+</div>
+<!--fixed container end-->
 <!--PC fixed element start-->
 <div class="header">
 <a href="http://uiccst.com"><div id="headerleft">
@@ -31,20 +92,10 @@
 <div id="bar2">
 <table cellspacing="0">
 	<tr style="height: 50px">
-		<th onclick="scrollit(100);">主页</th>
-		<th><a href="">英雄联盟</a></th>
-		<th><a href="">守望先锋</a></th>
-		<th onmouseover="showdiv()" onmouseout="hidediv()"><a href="">炉石传说</a></th>
-		<th><a href="">王者荣耀</a></th>
-		<th><a href="">皇室战争</a></th>
-		<th><a href="">欢乐斗地主</a></th>
+		<th><a href="#blank">主页</a></th>
+		<th><a href="#introduction">赛制介绍</a></th>
+		<th><a href="">比赛日程</a></th>
 		
-	</tr>
-	<tr onmouseover="showdiv()" onmouseout="hidediv()">
-		<td colspan="7"><ul id="spanul">
-	<a href="hearthstone/index.html"><li  class="spanli">查看卡组</li></a>
-	<a href="hearthstone/preupload.html"><li  class="spanli">上传卡组</li></a>
-</ul></td>
 	</tr>
 </table>
 
@@ -58,26 +109,24 @@
 </div>
 <div id="phonebarbackground" onclick="hidephonebar()">
 </div>
+<div id="pcbackground">
+</div>
 <div id="phonebar">
 <table cellpadding="18px">
 <tr><th><b>Menu</b></th></tr>
-	<tr><td><a href="#blank"><b>主页</b></a></td></tr>
+	<tr><td><a href="#blank" onclick="hidephonebar()"><b>主页</b></a></td></tr>
 	
 	<tr><td><a href="" onclick="hidephonebar()"><b>英雄联盟</b></a></td></tr>
-	<tr><td><a href="" onclick="hidephonebar()"><b>守望先锋</b></a></td></tr>
-	<tr><td onclick="hearth()" style="font-size: 18px"><b>炉石传说</b></td></tr>
-	<tr><td style="display: none;" id="hearthstone"><a href="" onclick="hidephonebar()"><b>炉石传说主页</b></a></td></tr>
-	<tr><td style="display: none;" id="watchcard"><a href="hearthstone/index.html" onclick="hidephonebar()"><b>查看炉石卡组</b></a></td></tr>
-	<tr><td style="display: none;" id="uploadcard"><a href="hearthstone/preupload.html" onclick="hidephonebar()"><b>上传炉石卡组</b></a></td></tr>
-	<tr><td><a href="" onclick="hidephonebar()"><b>王者荣耀</b></a></td></tr>
-	<tr><td><a href="" onclick="hidephonebar()"><b>皇室战争</b></a></td></tr>
+	<tr><td><a href="#owintro" onclick="hidephonebar()"><b>守望先锋</b></a></td></tr>
+	<tr><td><a href="" onclick="hidephonebar()"><b>炉石传说</b></a></td></tr>
+	<tr><td><a href="#kingintro" onclick="hidephonebar()"><b>王者荣耀</b></a></td></tr>
+	<tr><td><a href="#crintro" onclick="hidephonebar()"><b>皇室战争</b></a></td></tr>
 	<tr><td><a href="" onclick="hidephonebar()"><b>欢乐斗地主</b></a></td></tr>
 	<tr><th id="phonebarth"><a href="http://uiccst.com/form"><b>Register Now</b></a></th></tr>
 
 </table>
 </div>
 
-</div>
 <!--Mobile fixed element end-->
 <!--fixed element end-->
 
@@ -97,54 +146,78 @@
 </div>
 
 <!--add things from here-->
-<br>
-<br>
-<br>
-<br>
-<br>
-<div id="testscroll">
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+<div class="maingame" id="introduction">
+	<h1>赛制介绍</h1>
+  <div class="introbox shadow flowleft clearfix"  id="owintro" onclick='showdetailbox("owcontent")'>
+	  <img src="images/ow.png" width="100%" alt="">
+	  <h2>守望先锋</h2>
+<p class="left">《守望先锋》是一款由暴雪娱乐开发并发行的多人第一人称射击游戏。<br>
+	《守望先锋》把玩家分为两支队伍，每队6人。玩家可从几个预定英雄人物中选择，每个英雄有自己独特属性和技能；这些英雄分为四类：突击型、防御型、重装型和支援型。队员合力保护并捍卫地图上的控制点，或在有限时间内护送载具到达指定地点。玩家获得的诸如人物皮肤和胜利姿势等装扮不会影响游戏。</p>
+	  <p class="spanleft"><b>查看全文</b></p>
+  </div>
+	<div class="introbox shadow flowright clearfix"  id="kingintro" onclick='showdetailbox("kingcontent")'>
+		<img src="images/king.jpg" width="100%" alt="">
+		<h2>王者荣耀</h2>
+		<p class="left">《王者荣耀》是由腾讯游戏开发并运行的一款运营在Android、IOS平台上的MOBA类手游，于2015年11月26日在Android、IOS平台上正式公测，游戏前期使用名称有《英雄战迹》、《王者联盟》。
+			<br>王者荣耀是类dota手游，游戏中的玩法以竞技对战为主，玩家之间进行1V1、3V3、5V5等多种方式的PVP对战，还可以参加游戏的冒险模式，进行PVE的闯关模式，在满足条件后可以参加游戏的年度排位赛等。</p>
+		<p class="spanleft"><b>查看全文</b></p>
+	</div>
+	<div class="introbox shadow flowleft clearfix"  id="crintro" onclick='showdetailbox("crcontent")'>
+		<img src="images/clashroyale.png" width="100%" alt="">
+		<h2>皇室战争</h2>
+		<p class="left">《部落冲突：皇室战争》（Clash Royale）是由芬兰游戏公司Supercell所推出的，以《部落冲突》的角色和世界观为原型，加入即时策略、MOBA以及卡牌等元素的手机游戏，于2016年1月4日在App Store发布。
+			在游戏中，玩家需通过不断的开启宝箱来获取卡片的方式来增强自己的战斗力，进而与其他在线的玩家进行匹配战斗。随着奖杯提升，开启不同场地的竞技场。</p>
+		<p class="spanleft"><b>查看全文</b></p>
+	</div>
 </div>
-
+<!--blank-->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 </body>
 <script>
